kubernetes/deployment-events.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: superset-events
  labels:
    app: plaid
    plaid: superset-events
spec:
  replicas: 1
  minReadySeconds: 10
  template:
    metadata:
      name: superset
      labels:
        app: plaid
        plaid: superset-events
    spec:
      containers:
      - name: superset
        image: docker.io/plaidcloud/superset:1154-1
        imagePullPolicy: IfNotPresent
        command: ["sleep"]
        args: ["48h"]
        ports:
        - name: http
          containerPort: 8088
        # livenessProbe:
        #   httpGet:
        #     path: /
        #     port: 80
        #   initialDelaySeconds: 3
        #   periodSeconds: 3
        # readinessProbe:
        #   httpGet:
        #     path: /
        #     port: 80
        #   initialDelaySeconds: 3
        #   periodSeconds: 3
        volumeMounts:
        - name: superset-conf
          mountPath: /etc/superset/
        resources: {}
      imagePullSecrets:
      - name: dockerhub-key
      volumes:
      - name: superset-conf
        configMap:
            name: gbates-superset-config
