kubernetes/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: superset
  labels:
    app: plaid
    plaid: superset
spec:
  rules:
  - host: gbates-viz.plaidcloud.io
    http:
      paths:
      - path: /
        backend:
          serviceName: superset
          servicePort: 8088
